vengi (0.0.8.0-1) UNRELEASED; urgency=low

  * General:
  * Added obj and ply export support

 -- Martin Gerhardy <martin.gerhardy@gmail.com>  Tue, 15 Sep 2020 22:14:07 +0200

vengi (0.0.7.0-1) unstable; urgency=low

  * General:
  * Fixed wrong-name-for-symlinks shown
  * Added support for writing qef files
  * Added lua script interface to generate voxels
  * Added stacktrace support for windows
  * Refactored module structure (split app and core)
  * Optimized character animations
  * Hot reload character animation C++ source changes in debug builds
  * Added quaternion lua support
  * Updated external dependencies
  * Refactored lua bindings
  * Support Chronovox-Studio files (csm)
  * Support Nick's Voxel Model files (nvm)
  * Support more versions of the vxm format

  * VoxEdit:
  * Converted some voxel generation functions to lua
  * Implemented new voxel generator scripts

 -- Martin Gerhardy <martin.gerhardy@gmail.com>  Tue, 15 Sep 2020 22:14:07 +0200

vengi (0.0.6.0-1) unstable; urgency=low

  * General:
  * Fixed gamma cvar usage
  * Enable vsync by default
  * Updated external dependencies
  * Activated OpenCL in a few tools
  * Added symlink support to virtual filesystem

  * VoxEdit:
  * Fixed loading palette lua script with material definitions
  * Fixed error in resetting mirror axis
  * Fixed noise generation
  * Reduced palette widget size
  * Fixed palette widget being invisible on some dpi scales

 -- Martin Gerhardy <martin.gerhardy@gmail.com>  Sun, 2 Aug 2020 10:59:07 +0200

vengi (0.0.5.0-1) unstable; urgency=low

  * Client:
  * Fixed movement

  * Server:
  * Fixed visibility check
  * Fixed segfault while removing npcs

  * VoxEdit:
  * Started to add scene mode edit support (move volumes)

  * VoxConvert:
  * Support different palette files (cvar `palette`)
  * Support writing outside the registered application paths
  * Allow to overwrite existing files

  * General:
  * Switched to qb as default volume format