@@ -1,0 +1,4 @@
+# Remote AI Debugger
+
+This application allows you to connect to a running gameserver and inspect and change the state of
+every single ai controlled entity.
