@@ -1,18 +1,26 @@
 # Building
 
+The project should work on Linux, Windows and OSX. It should work with any ide that is either supported by cmake or has direct cmake support. Personally I'm using vscode with clangd at the moment. But also the command line with plain old `make`.
+
 ## Linux
 
-You can just run `make` in the project root folder.
+There is a `Makefile` wrapper around the build system. You can just run `make` in the project root folder.
 
 Every project has some extra CMake targets. There are e.g. `voxedit-run`, `voxedit-debug` and `voxedit-perf` if the needed tools were found during cmake's configure phase.
 
 That means that you can compile a single target by typing `make voxedit`, run it by typing `make voxedit-run`, debug it by typing `make voxedit-debug` and profile it by
-typing `make voxedit-perf`. There are also other targets for valgrind - just use the tab compiltion in the build folder to get a list.
+typing `make voxedit-perf`. There are also other targets for valgrind - just use the tab completion in the build folder to get a list.
 
 ## Windows
 
-The project should be buildable with every ide that supports cmake. QTCreator, Eclipse CDT, vscode or Visual Studio.
+The project should be buildable with every ide that supports cmake. QTCreator, Eclipse CDT, vscode or Visual Studio. Just install cmake, generate the project files, and open them in your ide.
 
 ## Mac
 
 You can generate your xcode project via cmake.
+
+## Hints
+
+If you encounter any problems, it's also a good start to check out the build pipelines of the project.
+This is always the most up-to-date information about how-to-build-the-project that you will find. But
+also please don't hesitate to ask for help on our discord server.
