@@ -11,7 +11,18 @@ provide debian and windows binaries here.
 
 Join our [discord Server](https://discord.gg/AgjCPXy).
 
+If you just came here to use a voxel editor or to convert your voxel models into an obj or ply file,
+you should just go to the [download page](https://github.com/mgerhardy/engine/releases) and check out
+the documentation of the tool as given in the navigation bar.
+
+If you came here as a developer, make sure to check out the [dependencies](Dependencies.md) and set up
+your development environment. The build scripts are cmake based, so make sure to have it installed and
+generate the project files for your desired ide. After setting up everything, make sure to check out
+the [compilation](Compilation.md) guide.
+
 ## Images
+
+![image](https://raw.githubusercontent.com/wiki/mgerhardy/engine/images/dwarf-in-editor.jpeg)
 
 ![image](https://raw.githubusercontent.com/wiki/mgerhardy/engine/images/gliding-2020-02-23.png)
 
