@@ -1,3 +1,0 @@
-# MapView
-
-The `mapview` tool can be used to walk and check generated worlds.
