@@ -1,10 +1,0 @@
-# Remote AI Debugger
-
-This application is part of the `simpleai` library. Find more documentation here: <http://mgerhardy.github.io/simpleai>
-
-## Compile
-
-To compile this on a debian based linux, you will need
-some qt related packages installed:
-
-`sudo apt-get install qt5-default qttools5-dev qttools5-dev-tools`
